Fixes for IE7 • CSS hasLayout • CSS: right-floated buttons would break into next line (now no float) • CSS (in JS): overlay did break into next line (now position: absolute) • JS: classname instead of setAttribute("class") • hide default-text-overlay when hovering with mouse (because click-through didn't work) • focus on start

--- a/src/ae_LaunchUp/css/LaunchUp.css
+++ b/src/ae_LaunchUp/css/LaunchUp.css
@@ -62,7 +62,7 @@ button {
 
 form {
   padding: 1em;
-  /*float: left;*/ /* Important: Using this breaks documentHeight. */
+  /* float: left; Important: Don't use this, it breaks documentHeight. */
 }
 
 fieldset {
@@ -95,6 +95,7 @@ fieldset div > :first-child {
 }
 
 
+
 /* UI elements */
 
 
@@ -114,9 +115,18 @@ fieldset div > :first-child {
   font-size: medium;
   font-style: normal;
   padding: 0;
-  /*text-indent: 0.375em;*/ /* TODO: Not needed on OSX */
+  text-indent: 0.375em;
   margin-right: -1em;
+  vertical-align: baseline;
+  *vertical-align: middle; /* IE7 */
   outline: none; /* Disables Safari's border highlighting. */
+}
+
+/* OS X has rounded search input that comes already with a huge text indent. */
+@media screen (-webkit-min-device-pixel-ratio:0) {
+  #combo_input, .combo_input {
+    text-indent: 0;
+  }
 }
 
 .default-text {
@@ -127,11 +137,20 @@ fieldset div > :first-child {
 
 #buttons_wrapper {
   display: inline-block;
+  /* Place it on the right (without float because of IE7) */
+  position: relative;
+  left: 2.75em;
+  top: 0;
+  margin-left: -2.25em;
+  /* Place it on the right (not IE7)
   float: right;
+  margin-right: -2.25em;*/
   width: 2.25em;
   line-height: inherit;
-  margin-right: -2.25em;
   text-align: center;
+  /* Internet Explorer 7 inline-block hack */
+  *display: inline;
+  zoom: 1;
 }
 
 #buttons_wrapper * {
@@ -141,10 +160,14 @@ fieldset div > :first-child {
 #buttons_wrapper_inner {
   display: inline-block;
   vertical-align: middle;
+  /* Internet Explorer 7 inline-block hack */
+  *display: inline;
+  zoom: 1;
 }
 
 #button_settings {
   display: block;
+  margin-bottom: 2px;
   width: 15px;
   height: 15px;
   background: url('../images/settings.png') no-repeat scroll 50% 50% transparent;
@@ -152,6 +175,7 @@ fieldset div > :first-child {
 
 #button_history {
   display: block;
+  margin-bottom: 2px;
   width: 15px;
   height: 15px;
   background: url('../images/history.png') no-repeat scroll 50% 50% transparent;
@@ -159,6 +183,7 @@ fieldset div > :first-child {
 
 #button_pin {
   display: block;
+  margin-bottom: 2px;
   width: 15px;
   height: 15px;
   background: url('../images/unpinned.png') no-repeat scroll 50% 50% transparent;
@@ -173,7 +198,6 @@ fieldset div > :first-child {
 }
 
 #lists_container {
-background: red;
   position: relative;
 }
 
@@ -260,6 +284,7 @@ background: red;
   font-weight: bold;
   overflow: hidden;
   text-overflow: ellipsis;
+  *float: left; /* IE6-7 element wrapping */
 }
 
 .list.slim li .category {
@@ -346,6 +371,8 @@ background: red;
 
 /* toolbar theme */
 
+
+
 #history .list.toolbar {
   background: url("../images/bg-normal.png") repeat scroll 0% 0% transparent;
   /*font-size: 0.5em; This could be used to scale the icons. */
@@ -353,11 +380,15 @@ background: red;
 
 .list.toolbar li {
   display: inline-block;
-  width: auto;
+  /*width: auto;*/
   width: 3em;
   height: 3em;
   line-height: 3em;
   overflow: hidden;
+  vertical-align: top;
+  /* Internet Explorer 7 inline-block hack */
+  *display: inline;
+  zoom: 1;
 }
 
 .list.toolbar li div {
@@ -375,15 +406,16 @@ background: red;
   vertical-align: middle;
   /*width: 1.85em;
   height: 1.85em;*/
+  margin: 0.5em;
   max-width: 2em;
   max-height: 2em;
 }
 
 .list.toolbar li .name {
   float: left;
-  line-height: 1em;
   /*font-weight: bold;*/
-  font-size: 1em;
+  font-size: 0.8em;
+  line-height: 1.25em;
   text-overflow: ellipsis;
   word-break: break-all;
   word-wrap: break-word;
